# gtest-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: boost.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/cmake/: gtest.cmake
test/tests/: tests.cpp
